--- a/app/globals.css
+++ b/app/globals.css
@@ -21,7 +21,7 @@
 
 body {
   background: var(--background);
-  color: var(--foreground);
+  background-color: rgb(197, 31, 197);
   font-family: Arial, Helvetica, sans-serif;
 }
 
